Flex and CSS properties

--- a/pages/employee_payroll.html
+++ b/pages/employee_payroll.html
@@ -11,8 +11,24 @@
 
 </head>
 <body>
-    
-    
+    <div class="container">
+        <div class="header_container">
+            <div class="header_content">
+                <img src="../assets/logo.png" alt="Logo">
+                <div class="brand_name">
+                    <span class="brand_text1">Employee</span>
+                    <span class="brand_text1 brand_text2">Payroll</span>
+                </div>
+            </div>
+        </div>
+        <div class="container_color">
+            <div class="main_container">
+                <div id='test_form'>
+                    <h2 class="form_heading">Employee Payroll Form</h2> 
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="../js/employee_payroll.js"></script>
 </body>
 </html>
