UC2 Input text element name

--- a/pages/employee_payroll.html
+++ b/pages/employee_payroll.html
@@ -25,6 +25,15 @@
             <div class="main_container">
                 <div id='test_form'>
                     <h2 class="form_heading">Employee Payroll Form</h2> 
+                    <div class="row">
+                        <div class="row_left">
+                            <label class="label text" for="name_id">Name</label>
+                        </div>
+                        <div class="row_right">
+                            <input type="text" class="name_text1" id="name_id" name="name_id">
+                            <output id='name_error' for="text"></output>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
