UC3 profile pic

--- a/pages/employee_payroll.html
+++ b/pages/employee_payroll.html
@@ -34,6 +34,21 @@
                             <output id='name_error' for="text"></output>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="row_left"><label for="name_text">Profile image</label></div>
+                        <div class="row_right">
+                            <div class="radio_row"><input type="radio" value="../assets/Ellipse 1.png" name="profile"><img src="../assets/Ellipse 1.png"></div> 
+                        </div>
+                        <div class="row_right">
+                            <div class="radio_row"><input type="radio" value="../assets/Ellipse -2.png" name="profile"><img src="../assets/Ellipse -2.png"></div> 
+                        </div>
+                        <div class="row_right">
+                            <div class="radio_row"><input type="radio" value="../assets/Ellipse -3.png" name="profile"><img src="../assets/Ellipse -3.png"></div> 
+                        </div>
+                        <div class="row_right">
+                            <div class="radio_row"><input type="radio" value="../assets/Ellipse -4.png" name="profile"><img src="../assets/Ellipse -4.png"></div> 
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
