UC6 notes and buttons

--- a/pages/employee_payroll.html
+++ b/pages/employee_payroll.html
@@ -233,6 +233,18 @@
                         </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="row_left"> <label for="name_text">Note</label></div>
+                        <div class="row_right textarea_row">
+                            <textarea name="name_text" rows="10" cols="30" class="form_textarea"></textarea>
+                        </div>
+                    </div>
+                    
+                    <div class="row_btn">
+                        <button type="button" class="button_1" id="cancel_btn">Cancel</button>
+                        <button type="submit" class="button_1" id="submit_btn" onclick="populate()">Submit</button>
+                        <button type="reset" class="button_1" id="reset_btn">Reset</button>
+                    </div> 
                 </div>
             </div>
         </div>
