--- a/pages/employee_payroll.html
+++ b/pages/employee_payroll.html
@@ -29,8 +29,8 @@
                         <div class="row_left">
                             <label class="label text" for="name_id">Name</label>
                         </div>
-                        <div class="row_right">
-                            <input type="text" class="name_text1" id="name_id" name="name_id">
+                        <div class="row_right_name">
+                            <input type="text" class="name_text1" id="name_id" name="name_id" >
                             <output id='name_error' for="text"></output>
                         </div>
                     </div>
