UC9 populate employee payroll object

--- a/pages/employee_payroll.html
+++ b/pages/employee_payroll.html
@@ -86,7 +86,7 @@
                     </div>
                     </div>
                     <div class="row">
-                        <div class="row_left"> <label for="name_text">Start Date</label></div>
+                        <div class="row_left"> <label for="name_text" id="">Start Date</label></div>
                        <div class="row_right">
                            <div class="date_container" id ="startdate">
                            <div class="day_box" >
@@ -229,7 +229,7 @@
                                     <option value="2021">2021</option>
                                 </select>
                             </div>
-                            <output class= 'date_error' ></output>
+                            <output_error class= 'date_error' ></output_error>
                         </div>
                         </div>
                     </div>
