UC12 body header

--- a/pages/login.html
+++ b/pages/login.html
@@ -21,6 +21,21 @@
                 </div>
             </div>
         </div>
+        <div class="main_container">
+            
+                <div class="header_content1">
+                    <div class="left_contents">
+                        <span class="brand_text3">
+                            Employee Details
+                        </span>
+                    </div>
+                    <div class="right_contents">
+                        <button type="submit" class="search_btn"><i class="fa fa-search" aria-hidden="true"></i>
+                        </button>
+                        <a href="../pages/employee_payroll.html"><button type="submit" class="add_user_btn">+ Add User</button></a>
+                    </div>
+                </div>
+            
     </div>
 </body>
 </html>
