UC13 tabular format

--- a/pages/login.html
+++ b/pages/login.html
@@ -35,6 +35,61 @@
                         <a href="../pages/employee_payroll.html"><button type="submit" class="add_user_btn">+ Add User</button></a>
                     </div>
                 </div>
+                <table class="table_content">
+                    <tr class="table_head">
+                        <th>Name</th>
+                        <th>Gender</th>
+                        <th>Department</th>
+                        <th>Salary</th>
+                        <th>Start Date</th>
+                        <th>Actions</th>
+                    </tr>
+                    <tr>
+                        <td>Komal</td>
+                        <td>Female</td>
+                        <td>Engineer</td>
+                        <td>200000</td>
+                        <td>2-1-2016</td>
+                        <td>
+                            <button type="submit"><i class="fa fa-trash"></i></button>
+                            <button type="submit"><i class="fa fa-edit"></i></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Komal</td>
+                        <td>Female</td>
+                        <td>Engineer</td>
+                        <td>200000</td>
+                        <td>2-1-2016</td>
+                        <td>
+                            <button type="submit"><i class="fa fa-trash"></i></button>
+                            <button type="submit"><i class="fa fa-edit"></i></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Komal</td>
+                        <td>Female</td>
+                        <td>Engineer</td>
+                        <td>200000</td>
+                        <td>2-1-2016</td>
+                        <td>
+                            <button type="submit"><i class="fa fa-trash"></i></button>
+                            <button type="submit"><i class="fa fa-edit"></i></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Komal</td>
+                        <td>Female</td>
+                        <td>Engineer</td>
+                        <td>200000</td>
+                        <td>2-1-2016</td>
+                        <td>
+                            <button type="submit"><i class="fa fa-trash"></i></button>
+                            <button type="submit"><i class="fa fa-edit"></i></button>
+                        </td>
+                    </tr>
+                </table>
+        </div>
             
     </div>
 </body>
